src/tests/testfiles/binary-operators/types-24.txt
Error at 2:5: Logic operator operands not compatible with int
1.6 && 0.6;
^
